@@ -5,6 +5,8 @@ import ca.kpu.info2413.library.backend.model.LibraryCard;
 import ca.kpu.info2413.library.backend.repository.AccountRepository;
 import ca.kpu.info2413.library.backend.repository.LibraryCardRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -20,6 +22,8 @@ public class AccountService
     @Autowired
     private LibraryCardRepository libraryCardRepository;
 
+    private final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
+
     public List<Account> findAll()
     {
         return accountRepository.findAll();
@@ -30,8 +34,14 @@ public class AccountService
         return accountRepository.findByAccountId(accountId);
     }
 
-    public Account save(Account account)
-    {
+    public Account save(Account account) {
+        // encode and stuff
+        String hash;
+        if(account.getPasswordHash() != null && !account.getPasswordHash().isEmpty()) {
+            hash = passwordEncoder.encode(account.getPasswordHash());
+            account.setPasswordHash(hash);
+        }
+
         return accountRepository.save(account);
     }
 
@@ -45,7 +55,7 @@ public class AccountService
         // find the library card and return linked Account if present
         List<LibraryCard> cards = libraryCardRepository.findByCardNumber(libraryCardNumber);
         if (cards == null || cards.isEmpty()) return Optional.empty();
-        LibraryCard card = cards.get(0);
+        LibraryCard card = cards.getFirst();
         return Optional.ofNullable(card.getAccount());
     }
 
